--- a/gestion_construccion/Views/Ventas/Create.cshtml
+++ b/gestion_construccion/Views/Ventas/Create.cshtml
@@ -10,8 +10,8 @@
 
 <form asp-action="Create">
     <div class="form-group">
-        <label asp-for="PersonaId" class="control-label">Cliente</label>
-        <select asp-for="PersonaId" class="form-control" asp-items="ViewBag.PersonaId"></select>
+        <label asp-for="ClienteId" class="control-label">Cliente</label>
+        <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
     </div>
     <div class="form-group">
         <label asp-for="Fecha" class="control-label"></label>
