--- a/gestion_construccion/Views/Clientes/Delete.cshtml
+++ b/gestion_construccion/Views/Clientes/Delete.cshtml
@@ -6,15 +6,19 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<h3>¿Estás seguro de que quieres eliminar esto?</h3>
+<h3>¿Estás seguro de que quieres eliminar este cliente?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Nombre)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Nombre)</dd>
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Email)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
+        <dt class="col-sm-2">Nombre</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Usuario.Nombre)</dd>
+        
+        <dt class="col-sm-2">Email</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Usuario.Email)</dd>
+
+        <dt class="col-sm-2">Dirección</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Direccion)</dd>
     </dl>
     
     <form asp-action="Delete">
