--- a/gestion_construccion/Views/Ventas/Index.cshtml
+++ b/gestion_construccion/Views/Ventas/Index.cshtml
@@ -1,35 +1,37 @@
 @model IEnumerable<gestion_construccion.Models.Venta>
 
 @{
-    ViewData["Title"] = "Ventas";
+    ViewData["Title"] = "Historial de Ventas";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>@ViewData["Title"]</h2>
-
-<p>
-    <a asp-action="Create">Crear Nueva Venta</a>
-</p>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>@Html.DisplayNameFor(model => model.Cliente.Nombre)</th>
-            <th>@Html.DisplayNameFor(model => model.Fecha)</th>
-            <th>@Html.DisplayNameFor(model => model.Total)</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@Html.DisplayFor(modelItem => item.Cliente.Nombre)</td>
-                <td>@Html.DisplayFor(modelItem => item.Fecha)</td>
-                <td>@Html.DisplayFor(modelItem => item.Total)</td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Detalles</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div class="card">
+    <div class="card-header">
+        <a asp-action="Create" class="btn btn-primary">Crear Nueva Venta</a>
+    </div>
+    <div class="card-body">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Cliente</th>
+                    <th>Fecha</th>
+                    <th>Total</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.Cliente.Usuario.Nombre)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Fecha)</td>
+                        <td>@item.Total.ToString("C")</td>
+                        <td>
+                            <a asp-action="Receipt" asp-route-id="@item.Id">Ver Recibo</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
